After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737675 - media: media_unprepare() is kind of broken
media: media_unprepare() is kind of broken
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-30 17:23 UTC by Ognyan Tonchev (redstar_)
Modified: 2014-09-30 20:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
media: set state to unpreparing when unprepare is initiated (1.17 KB, patch)
2014-09-30 17:23 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2014-09-30 17:23:07 UTC
Created attachment 287474 [details] [review]
media: set state to unpreparing when unprepare is initiated

The 7f40d3d8 commit has broken the unprepare mechanism. Look at that commit and also at media_unprepare():

gst_rtsp_media_unprepare (GstRTSPMedia * media)
{
...

  gst_rtsp_media_set_status (media, GST_RTSP_MEDIA_STATUS_UNPREPARING);

  if (priv->status == GST_RTSP_MEDIA_STATUS_PREPARED) {
    GstRTSPMediaClass *klass;

...

This condition is never going to be met.
Comment 1 Sebastian Dröge (slomo) 2014-09-30 20:16:58 UTC
commit d48e022c137fea5480462f1433b9e44c113e2805
Author: Ognyan Tonchev <otonchev@gmail.com>
Date:   Tue Sep 30 19:17:04 2014 +0200

    media: set state to unpreparing when unprepare is initiated
    
    https://bugzilla.gnome.org/show_bug.cgi?id=737675