media: set state to unpreparing when unprepare is initiated

https://bugzilla.gnome.org/show_bug.cgi?id=737675